--- a/css/style1.css
+++ b/css/style1.css
@@ -565,12 +565,14 @@ section{
     transition: transform .5s;
 }
 .social-link #instagram:hover,
-#youtube:hover,#facebook:hover, #twitter:hover
+#youtube:hover,#facebook:hover, #twitter:hover 
+
 {
     color: var(--purpule);
     background-color: var(--fgreen);
     transform: translateY(-7px);
 }
+
 .bas
 {
     margin-top:20px;
@@ -580,10 +582,127 @@ section{
     font-weight: 800;
     margin-bottom: 2rem;
 }
+.container{
+   width: 85%;
+   background:rgb(222, 218, 218);
+   border-radius: 6px;
+   padding: 20px 60px 30px 40px;
+   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+   margin-top:5rem ;
+   margin-left: 12rem;
+   margin-bottom: -6rem;
+ }
+ .container .content{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+ }
+ .container .content .left-side{
+   width: 25%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   margin-top: 15px;
+   position: relative;
+ }
+ .content .left-side::before{
+   content: '';
+   position: absolute;
+   height: 70%;
+   width: 2px;
+   right: -15px;
+   top: 50%;
+   transform: translateY(-50%);
+   background: #afafb6;
+ }
+ .content .left-side .details{
+   margin: 14px;
+   text-align: center;
+ }
+ .content .left-side .details i{
+   font-size: 30px;
+   color: var(--light-blue);
+   margin-bottom: 10px;
+ }
+ .content .left-side .details .topic{
+   font-size: 18px;
+   font-weight: 500;
+ }
+ .content .left-side .details .text-one,
+ .content .left-side .details .text-two{
+   font-size: 14px;
+   color: var(--black);
+ }
 
+ .content .left-side .details #icon:hover{
 
+      color: var(--purpule);
+      background-color: var(--fgreen);
+      transform: translateY(-7px);
+  
 
+ }
+ .container .content .right-side{
+   width: 75%;
+   margin-left: 75px;
+ }
+ .content .right-side  .heading{
+   font-size: 2.5rem;
+   
+   margin-top: 2rem;
+}
+.content .right-side .paragraph{
+   font-size: 1.5rem;
+  
+   margin-top: 2.5rem;
+}
+ .right-side .input-box{
+   height: 5vh;
+   width: 100%;
+   margin: 12px 0;
+ }
+ .right-side .input-box input,
+ .right-side .input-box textarea{
+   height: 100%;
+   width: 100%;
+   border: none;
+   outline: none;
+   font-size: 16px;
+   background: #F0F1F8;
+   border-radius: 6px;
+   padding: 0 15px;
+   resize: none;
+ }
+ .right-side .message-box{
+   min-height: 110px;
+ }
+ .right-side .input-box textarea{
+   padding-top: 6px;
+ }
+ .right-side .button{
+   display: inline-block;
+   margin-top:1rem;
 
+ }
+ .right-side .button input[type="button"]{
+   color: #fff;
+   font-size: 18px;
+   outline: none;
+   border: none;
+   padding: 8px 16px;
+   border-radius: 6px;
+   background: var(--light-blue);
+   cursor: pointer;
+   transition: all 0.3s ease;
+ }
+ .button input[type="button"]:hover{
+   color: var(--white);
+   background-color: var(--purpule);
+   transform: translateY(-7px);
+ }
+ 
 
 
 
@@ -665,6 +784,29 @@ section{
          width: 100%;
          flex-basis: 100%;
       }
+      .container{
+         margin: 40px ;
+         height: 100%;
+         margin-left: 5.5rem;
+       }
+       .container .content{
+         flex-direction: column-reverse;
+       }
+      .container .content .left-side{
+        width: 100%;
+        flex-direction: row;
+        margin-top: 40px;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+      .container .content .left-side::before{
+        display: none;
+      }
+      .container .content .right-side{
+        width: 100%;
+        margin-left: 0;
+      }
+     
    
 }
 
